@@ -31,14 +31,26 @@ class Identity{
   private HASH hash;
   private byte[] encoded_data;
 
+  private Cipher cipher;
+
+  // DSA
   private byte[] P_array;    
   private byte[] Q_array;    
   private byte[] G_array;    
   private byte[] pub_array;    
   private byte[] prv_array;    
-  private Cipher cipher;
  
-  private String algname="ssh-dss";
+  // RSA
+  private  byte[] n_array;   // modulus
+  private  byte[] e_array;   // public exponent
+  private  byte[] d_array;   // private exponent
+ 
+//  private String algname="ssh-dss";
+  private String algname="ssh-rsa";
+
+  static final int RSA=0;
+  static final int DSS=1;
+  private int type=0;
 
   Identity(String identity, Session session){
     this.identity=identity;
@@ -60,6 +72,20 @@ class Identity{
 
       int i=0;
       while(i<len){
+        if(buf[i]=='B'&& buf[i+1]=='E'&& buf[i+2]=='G'&& buf[i+3]=='I'){
+          i+=6;	    
+          if(buf[i]=='D'&& buf[i+1]=='S'&& buf[i+2]=='A'){
+            type=DSS;
+	  }
+	  else if(buf[i]=='R'&& buf[i+1]=='S'&& buf[i+2]=='A'){
+            type=RSA;
+	  }
+	  else{
+            System.out.println("invalid format: "+identity);
+	  }
+          i+=2;
+	  continue;
+	}
         if(buf[i]=='C'&& buf[i+1]=='B'&& buf[i+2]=='C'&& buf[i+3]==','){
           i+=4;
 	  for(int ii=0; ii<iv.length; ii++){
@@ -91,10 +117,12 @@ class Identity{
     catch(Exception e){
       //System.out.println(e);
     }
+
   }
 
   String getAlgName(){
-    return algname;
+    if(type==RSA) return "ssh-rsa";
+    return "ssh-dss"; 
   }
 
   boolean setPassphrase(byte[] passphrase) throws Exception{
@@ -122,7 +150,21 @@ class Identity{
   }
 
   byte[] getPublicKeyBlob(){
+    if(type==RSA) return getPublicKeyBlob_rsa();
+    return getPublicKeyBlob_dss();
+  }
 
+  byte[] getPublicKeyBlob_rsa(){
+    Buffer buf=new Buffer("ssh-rsa".length()+4+
+			   e_array.length+4+ 
+ 			   n_array.length+4);
+    buf.putString("ssh-rsa".getBytes());
+    buf.putString(e_array);
+    buf.putString(n_array);
+    return buf.buffer;
+  }
+
+  byte[] getPublicKeyBlob_dss(){
     Buffer buf=new Buffer("ssh-dss".length()+4+
 			   P_array.length+4+ 
 			   Q_array.length+4+ 
@@ -137,9 +179,47 @@ class Identity{
   }
 
   byte[] getSignature(byte[] data){
+    if(type==RSA) return getSignature_rsa(data);
+    return getSignature_dss(data);
+  }
+
+  byte[] getSignature_rsa(byte[] data){
     try{      
-      Class c=Class.forName(session.getConfig("signature.dsa"));
-      Signature dsa=(Signature)(c.newInstance());
+      Class c=Class.forName(session.getConfig("signature.rsa"));
+      SignatureRSA rsa=(SignatureRSA)(c.newInstance());
+
+//      Class c=Class.forName(session.getConfig("signature.dsa"));
+//      Class c=Class.forName(session.getConfig("signature.dsa"));
+//      Signature dsa=(Signature)(c.newInstance());
+//      SignatureRSA rsa=new com.jcraft.jsch.jce.SignatureRSA();
+
+      rsa.init();
+      rsa.setPrvKey(d_array, n_array);
+
+      byte[] goo=new byte[4];
+      goo[0]=(byte)(session.getSessionId().length>>>24);
+      goo[1]=(byte)(session.getSessionId().length>>>16);
+      goo[2]=(byte)(session.getSessionId().length>>>8);
+      goo[3]=(byte)(session.getSessionId().length);
+      rsa.update(goo);
+      rsa.update(session.getSessionId());
+      rsa.update(data);
+      byte[] sig = rsa.sign();
+      Buffer buf=new Buffer("ssh-rsa".length()+4+
+			    sig.length+4);
+      buf.putString("ssh-rsa".getBytes());
+      buf.putString(sig);
+      return buf.buffer;
+    }
+    catch(Exception e){
+    }
+    return null;
+  }
+
+  byte[] getSignature_dss(byte[] data){
+    try{      
+      Class c=Class.forName(session.getConfig("signature.dss"));
+      SignatureDSA dsa=(SignatureDSA)(c.newInstance());
       dsa.init();
       dsa.setPrvKey(prv_array, P_array, Q_array, G_array);
 
@@ -164,6 +244,130 @@ class Identity{
   }
 
   boolean decrypt(){
+    if(type==RSA) return decrypt_rsa();
+    return decrypt_dss();
+  }
+
+  boolean decrypt_rsa(){
+    byte[] p_array;
+    byte[] q_array;
+    byte[] dmp1_array;
+    byte[] dmq1_array;
+    byte[] iqmp_array;
+
+    try{
+      cipher.init(Cipher.DECRYPT_MODE, key, iv);
+      byte[] plain=new byte[encoded_data.length];
+      cipher.update(encoded_data, 0, encoded_data.length, plain, 0);
+
+      int index=0;
+      int length=0;
+
+      if(plain[index]!=0x30)return false;
+      index++; // SEQUENCE
+      length=plain[index++]&0xff;
+      if((length&0x80)!=0){
+        int foo=length&0x7f; length=0;
+        while(foo-->0){ length=(length<<8)+(plain[index++]&0xff); }
+      }
+
+      if(plain[index]!=0x02)return false;
+      index++; // INTEGER
+      length=plain[index++]&0xff;
+      if((length&0x80)!=0){
+        int foo=length&0x7f; length=0;
+        while(foo-->0){ length=(length<<8)+(plain[index++]&0xff); }
+      }
+      index+=length;
+
+      index++;
+      length=plain[index++]&0xff;
+      if((length&0x80)!=0){
+        int foo=length&0x7f; length=0;
+        while(foo-->0){ length=(length<<8)+(plain[index++]&0xff); }
+      }
+      n_array=new byte[length];
+      System.arraycopy(plain, index, n_array, 0, length);
+      index+=length;
+
+      index++;
+      length=plain[index++]&0xff;
+      if((length&0x80)!=0){
+        int foo=length&0x7f; length=0;
+        while(foo-->0){ length=(length<<8)+(plain[index++]&0xff); }
+      }
+      e_array=new byte[length];
+      System.arraycopy(plain, index, e_array, 0, length);
+      index+=length;
+
+      index++;
+      length=plain[index++]&0xff;
+      if((length&0x80)!=0){
+        int foo=length&0x7f; length=0;
+        while(foo-->0){ length=(length<<8)+(plain[index++]&0xff); }
+      }
+      d_array=new byte[length];
+      System.arraycopy(plain, index, d_array, 0, length);
+      index+=length;
+
+      index++;
+      length=plain[index++]&0xff;
+      if((length&0x80)!=0){
+        int foo=length&0x7f; length=0;
+        while(foo-->0){ length=(length<<8)+(plain[index++]&0xff); }
+      }
+      p_array=new byte[length];
+      System.arraycopy(plain, index, p_array, 0, length);
+      index+=length;
+
+      index++;
+      length=plain[index++]&0xff;
+      if((length&0x80)!=0){
+        int foo=length&0x7f; length=0;
+        while(foo-->0){ length=(length<<8)+(plain[index++]&0xff); }
+      }
+      q_array=new byte[length];
+      System.arraycopy(plain, index, q_array, 0, length);
+      index+=length;
+
+      index++;
+      length=plain[index++]&0xff;
+      if((length&0x80)!=0){
+        int foo=length&0x7f; length=0;
+        while(foo-->0){ length=(length<<8)+(plain[index++]&0xff); }
+      }
+      dmp1_array=new byte[length];
+      System.arraycopy(plain, index, dmp1_array, 0, length);
+      index+=length;
+
+      index++;
+      length=plain[index++]&0xff;
+      if((length&0x80)!=0){
+        int foo=length&0x7f; length=0;
+        while(foo-->0){ length=(length<<8)+(plain[index++]&0xff); }
+      }
+      dmq1_array=new byte[length];
+      System.arraycopy(plain, index, dmq1_array, 0, length);
+      index+=length;
+
+      index++;
+      length=plain[index++]&0xff;
+      if((length&0x80)!=0){
+        int foo=length&0x7f; length=0;
+        while(foo-->0){ length=(length<<8)+(plain[index++]&0xff); }
+      }
+      iqmp_array=new byte[length];
+      System.arraycopy(plain, index, iqmp_array, 0, length);
+      index+=length;
+    }
+    catch(Exception e){
+      //System.out.println(e);
+      return false;
+    }
+    return true;
+  }
+
+  boolean decrypt_dss(){
     try{
       cipher.init(Cipher.DECRYPT_MODE, key, iv);
       byte[] plain=new byte[encoded_data.length];
@@ -240,7 +444,7 @@ class Identity{
       index+=length;
     }
     catch(Exception e){
-      // System.out.println(+e);
+      //System.out.println(e);
       return false;
     }
     return true;
