@@ -38,7 +38,7 @@ public abstract class KeyExchange{
   //static String kex_algs="diffie-hellman-group-exchange-sha1"+
   //                       ",diffie-hellman-group1-sha1";
   static String kex="diffie-hellman-group-exchange-sha1";
-  static String server_host_key="ssh-dss";
+  static String server_host_key="ssh-rsa,ssh-dss";
   static String enc_c2s="blowfish-cbc";
   static String enc_s2c="blowfish-cbc";
   static String mac_c2s="hmac-md5";     // hmac-md5,hmac-sha1,hmac-ripemd160,
@@ -56,4 +56,5 @@ public abstract class KeyExchange{
   public abstract HASH getHash();
   public abstract byte[] getHostKey();
   public abstract String getFingerPrint();
+  public abstract String getKeyType();
 }
