@@ -1,6 +1,6 @@
 ChangeLog of JSch
 ====================================================================
-Last modified: Tue Oct 29 15:19:45 UTC 2002
+Last modified: Thu Oct 31 13:36:01 UTC 2002
 
 Changes since version 0.0.1:
 - the tunneling via HTTP proxy is supported.
@@ -33,3 +33,7 @@ Changes since version 0.0.5:
 - DSA public key authentication is supported.
 - examples/UserAuthPubKey.java is added.
 - examples/ScpTo.java is added.
+
+Changes since version 0.0.6:	
+- RSA host key is supported.
+- RSA public key authentication is supported.
